# data-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: analyze.py
app/core/: cache.py  config.py  evaluator.py  llm_pipeline.py  schema_manager.py
app/core/executor/: postgres_executor.py
app/models/: schemas.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_executor.py
